tests/err07.json.err
Parse error at line 002

001: {
002: 	"a": a
     	     ^
Expected object, array, number or string
